chore: wrapper spacing bug fix

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -271,7 +271,7 @@ main .section {
   padding: 50px 20px 10px;
 }
 
-main .section [class*=wrapper] + [class*=wrapper] {
+main .section [class*=wrapper]:not(.default-content-wrapper) + [class*=wrapper]:not(.default-content-wrapper) {
   padding-top: 80px;
 }
 
